@@ -1,3 +1,4 @@
+9/29/10 layout charges in a grid using algorithm from CCK's CapacitorNode (lines 270-230)
 9/29/10 handle partially-inserted dielectric for Plate Charges view
 9/29/10 make battery have no affect when disconnected
 9/29/10 fixed another plate charge polarity issue
